[package]
name = "sheen"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arferreira/sheen"
documentation = "https://github.com/arferreira/sheen"
readme = "./README.md"
description = "A polished, colorful logging library for Rust"
keywords = ["rust", "logging", "tracing", "sheen", "log"]
categories = ["development-tools::debugging", "logging"]

[dependencies]
owo-colors = "4.2.3"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
