[package]
name = "sheen"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arferreira/sheen"
documentation = "https://github.com/arferreira/sheen"
readme = "./README.md"
description = "A polished, colorful logging library for Rust"
keywords = ["rust", "logging", "tracing", "sheen", "log"]
categories = ["development-tools::debugging"]

[dependencies]
owo-colors = "4.2.3"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
# Log impl
log = { version = "0.4.29", optional = true, features = ["std"] }


[dev-dependencies]
log = "0.4.29"

[[example]]
name = "log_adapter"
required-features = ["log"]
